TP1Maven - Add Sonar

--- a/tp1maven/pom.xml
+++ b/tp1maven/pom.xml
@@ -52,7 +52,7 @@
     </plugins>
  </reporting>
  <scm>
- 	<connection>scm:svn:svn://IPSERVEUR/repository1/monappli-web</connection>
- 	<url>http://IPSERVEUR/svn/monappli-web</url>
+ 	<connection>scm:git:http://github.com/julienmoulinrennes1/SIR/tp1maven</connection>
+ 	<url>scm:git:http://github.com/julienmoulinrennes1/SIR/tp1maven</url>
  </scm>
 </project>
